--- a/playbooks/smax-insert-devices.yml
+++ b/playbooks/smax-insert-devices.yml
@@ -125,7 +125,17 @@
                 # Additional properties
 #                Status: "{{ item.status | default('In Service') }}"
                 # NetworkCards: mac_addresses içindeki her bir eleman için MacAddress ve Name alanlarını doldur
-                NetworkCards: "{{ {'NetworkCard': (item.mac_addresses | default([]) | map('combine', {'MacAddress': item.mac | default(''), 'Name': item.port_name | default('')}) | list) if item.mac_addresses | default([]) | length > 0 else []} | to_json }}"
+                NetworkCards: >-
+                  {{
+                    {'NetworkCard': (
+                      item.mac_addresses | default([]) | map('combine', {
+                        'MacAddress': attribute('mac'),
+                        'Name': attribute('port_name')
+                      }) | list
+                    )} | to_json
+                    if item.mac_addresses is defined and item.mac_addresses | length > 0
+                    else omit
+                  }}
                 Vendor: "{{ item.manufacturer | default('') }}"
                 Model: "{{ item.hw_model | default('') }}"
                 Environment: "{{ item.service_level | default('') }}"
