--- a/playbooks/smax-insert-devices.yml
+++ b/playbooks/smax-insert-devices.yml
@@ -125,7 +125,7 @@
                 # Additional properties
 #                Status: "{{ item.status | default('In Service') }}"
                 # NetworkCards: mac_addresses içindeki her bir eleman için MacAddress ve Name alanlarını doldur
-                NetworkCards: "{{ {'NetworkCard': item.mac_addresses | default([]) | map('extract', ['mac', 'port_name']) | map('list') | map('to_json') | map('from_json') | map('combine', [{'MacAddress': '', 'Name': ''}]) | list } | to_json if item.mac_addresses is defined and item.mac_addresses | length > 0 else omit }}"
+                NetworkCards: "{{ {'NetworkCard': item.mac_addresses | default([]) | json_query('[].{"MacAddress": mac, "Name": port_name}') } | to_json if item.mac_addresses is defined and item.mac_addresses | length > 0 else omit }}"
                 Vendor: "{{ item.manufacturer | default('') }}"
                 Model: "{{ item.hw_model | default('') }}"
                 Environment: "{{ item.service_level | default('') }}"
