--- a/playbooks/smax-insert-devices.yml
+++ b/playbooks/smax-insert-devices.yml
@@ -125,7 +125,18 @@
                 # Additional properties
 #                Status: "{{ item.status | default('In Service') }}"
                 # NetworkCards: mac_addresses içindeki her bir eleman için MacAddress ve Name alanlarını doldur
-                NetworkCards: "{{ {'NetworkCard': item.mac_addresses | default([]) | json_query('[].{\"MacAddress\": mac, \"Name\": port_name}') } | to_json if item.mac_addresses is defined and item.mac_addresses | length > 0 else omit }}"
+                NetworkCards: >-
+                  {{
+                    {'NetworkCard': (('[%s]' % (
+                      ','.join([
+                        '{"MacAddress": "%s", "Name": "%s"}' % (mac.mac | default(''), mac.port_name | default(''))
+                        for mac in item.mac_addresses | default([])
+                      ])
+                    )) | from_json)}
+                    | to_json
+                    if item.mac_addresses is defined and item.mac_addresses | length > 0
+                    else omit
+                  }}
                 Vendor: "{{ item.manufacturer | default('') }}"
                 Model: "{{ item.hw_model | default('') }}"
                 Environment: "{{ item.service_level | default('') }}"
