--- a/playbooks/smax-insert-devices.yml
+++ b/playbooks/smax-insert-devices.yml
@@ -125,7 +125,7 @@
                 # Additional properties
 #                Status: "{{ item.status | default('In Service') }}"
                 # NetworkCards: A Working payload
-                NetworkCards: "{{ {'NetworkCard': (item.mac_addresses | default([]) | map('combine', {'NetworkCardSpeed': '', 'NetworkCardName': '', 'NetworkCardType': '', 'NetworkCardRole': '', 'GlobalId': '', 'Keep': '', 'Id': ''}) | map('combine', {'MacAddress': attribute.mac | default('')}) | list ) } | to_json }}"
+                NetworkCards: "{{ {'NetworkCard': (item.mac_addresses | default([]) | map('combine', {'MacAddress': attribute.mac | default(''), 'NetworkCardSpeed': '', 'NetworkCardName': '', 'NetworkCardType': '', 'NetworkCardRole': '', 'GlobalId': '', 'Keep': '', 'Id': ''}) | list ) } | to_json }}"
                 Vendor: "{{ item.manufacturer | default('') }}"
                 Model: "{{ item.hw_model | default('') }}"
                 Environment: "{{ item.service_level | default('') }}"
