--- a/playbooks/smax-insert-devices.yml
+++ b/playbooks/smax-insert-devices.yml
@@ -140,6 +140,30 @@
         loop_var: item
       register: clean_network_cards_results
 
+    - name: Add SMAX network cards to each processed device
+      set_fact:
+        processed_devices: >-
+          {{
+            processed_devices | default([]) + [
+              item | combine({
+                'clean_network_cards': (
+                  item.mac_addresses | default([]) | map(attribute='mac') | map('community.general.dict_kv', 'MacAddress') | map('combine', {
+                    'NetworkCardSpeed': '',
+                    'NetworkCardName': '',
+                    'NetworkCardType': '',
+                    'NetworkCardRole': '',
+                    'GlobalId': '',
+                    'Keep': '',
+                    'Id': ''
+                  }) | list
+                )
+              })
+            ]
+          }}
+      loop: "{{ devices }}"
+      loop_control:
+        loop_var: item
+
     - name: Send each device to SMAX
       vars:
         device_payload:
@@ -164,7 +188,7 @@
                 # Additional properties
 #                Status: "{{ item.status | default('In Service') }}"
                 # NetworkCards: A Working payload
-                NetworkCards: "{{ {'NetworkCard': clean_network_cards } | to_json }}"
+                NetworkCards: "{{ {'NetworkCard': item.clean_network_cards | default([]) } | to_json }}"
                 Vendor: "{{ item.manufacturer | default('') }}"
                 Model: "{{ item.hw_model | default('') }}"
                 Environment: "{{ item.service_level | default('') }}"
