--- a/playbooks/smax-insert-devices.yml
+++ b/playbooks/smax-insert-devices.yml
@@ -113,7 +113,14 @@
       set_fact:
         clean_network_cards: >-
           {{
-            '[{% for mac in mac_list %}{"MacAddress": "{{ mac }}", "NetworkCardSpeed": "", "NetworkCardName": "", "NetworkCardType": "", "NetworkCardRole": "", "GlobalId": "", "Keep": "", "Id": ""}{% if not loop.last %},{% endif %}{% endfor %}]' | from_yaml
+            (
+              '{% if mac_list|length == 0 %}[]' + '{% else %}[' +
+              '{% for mac in mac_list %}' +
+              '{"MacAddress": "' + mac + '", "NetworkCardSpeed": "", "NetworkCardName": "", "NetworkCardType": "", "NetworkCardRole": "", "GlobalId": "", "Keep": "", "Id": ""}' +
+              '{% if not loop.last %},{% endif %}' +
+              '{% endfor %}' +
+              ']{% endif %}'
+            ) | from_yaml
           }}
       vars:
         mac_list: "{{ item.mac_addresses | default([]) | map(attribute='mac') | list }}"
